--- a/index.html
+++ b/index.html
@@ -91,21 +91,21 @@
             <div class="row text-center">
                 <div class="col-sm-4">
                     <div class="thumbnail">
-                        <img src="Proj1.png" alt="Proj1" width="400" height="300">
+                        <img src="Proj1.PNG" alt="Proj1" width="400" height="300">
                         <h3><b>PERSONAL PORTFOLIO</b></h3>
                         <a href="D:\Projects\Portfolio\Main.html" target="_blank"><button type="button" class="btn btn-md btn-primary">More Info</button></a>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="thumbnail">
-                        <img src="Proj2.png" alt="Proj2" width="400" height="300">
+                        <img src="Proj2.PNG" alt="Proj2" width="400" height="300">
                         <h3><b>FITNESS</b></h3>
                         <a href="D:\Projects\New folder\Stay Fit\main.html" target="_blank"><button type="button" class="btn btn-md btn-primary">More Info</button></a>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="thumbnail">
-                        <img src="Proj3.png" alt="Proj3" width="400" height="300">
+                        <img src="Proj3.PNG" alt="Proj3" width="400" height="300">
                         <h3><b>A-Z INFORMATIONS</b></h3>
                         <a href="D:\Projects\New folder\Informations\Main.html" target="_blank"><button type="button" class="btn btn-md btn-primary">More Info</button></a>
                     </div>
