--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     		</div>
     		<div class="col-sm-4">
     			    <div class="card">
-                  <img src="avatar 2.png" alt="Ankit Bapat">
+                  <img src="avatar 2.PNG" alt="Ankit Bapat">
                   <h1>Ankit Bapat</h1>
                   <p class="title">User-Interface Developer</p>
                   <p>V2Solutions Pvt. Ltd.</p> 
