--- a/index.html
+++ b/index.html
@@ -168,21 +168,21 @@
                     <div class="thumbnail">
                         <img src="Proj1.PNG" alt="Proj1" width="400" height="300">
                         <h3><b>PERSONAL PORTFOLIO</b></h3>
-                        <a href="https://ankitbapat.github.io/myportfolio/" target="_blank"><button type="button" class="btn btn-md btn-primary">More Info</button></a>
+                        <a href="https://ankitbapat.github.io/myportfolio/" target="_blank"><button type="button" class="btn btn-md btn-primary">View Website</button></a>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="thumbnail">
                         <img src="Proj2.PNG" alt="Proj2" width="400" height="300">
                         <h3><b>FITNESS</b></h3>
-                        <a href="https://ankitbapat.github.io/StayFit/" target="_blank"><button type="button" class="btn btn-md btn-primary">More Info</button></a>
+                        <a href="https://ankitbapat.github.io/StayFit/" target="_blank"><button type="button" class="btn btn-md btn-primary">View Website</button></a>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="thumbnail">
                         <img src="Proj3.PNG" alt="Proj3" width="400" height="300">
                         <h3><b>A-Z INFORMATIONS</b></h3>
-                        <a href="https://ankitbapat.github.io/informations/" target="_blank"><button type="button" class="btn btn-md btn-primary">More Info</button></a>
+                        <a href="https://ankitbapat.github.io/informations/" target="_blank"><button type="button" class="btn btn-md btn-primary">View Website</button></a>
                     </div>
                 </div>
             </div>
@@ -192,21 +192,21 @@
                     <div class="thumbnail">
                         <img src="Proj4.PNG" alt="Proj4" width="400" height="300">
                         <h3><b>Insurance Lender Company</b></h3>
-                        <a href="https://ankitbapat.github.io/Insurance-Lender-Company/" target="_blank"><button type="button" class="btn btn-md btn-primary">More Info</button></a>
+                        <a href="https://ankitbapat.github.io/Insurance-Lender-Company/" target="_blank"><button type="button" class="btn btn-md btn-primary">View Website</button></a>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="thumbnail">
                         <img src="Proj5.PNG" class="adj-img" alt="Proj5" width="400" height="300">
                         <h3><b>RPA</b></h3>
-                        <a href="https://ankitbapat.github.io/RPA/" target="_blank"><button type="button" class="btn btn-md btn-primary">More Info</button></a>
+                        <a href="https://ankitbapat.github.io/RPA/" target="_blank"><button type="button" class="btn btn-md btn-primary">View Website</button></a>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="thumbnail">
                         <img src="Proj6.PNG" class="adj-img" alt="Proj6" width="400" height="300">
                         <h3><b>Angular CURD</b></h3>
-                        <a href="https://ankitbapat.github.io/crudProject/" target="_blank"><button type="button" class="btn btn-md btn-primary">More Info</button></a>
+                        <a href="https://ankitbapat.github.io/crudProject/" target="_blank"><button type="button" class="btn btn-md btn-primary">View Website</button></a>
                     </div>
                 </div>
             </div>
